created mix service and planning algorithm (nop) and basic test cases

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,15 @@
-# https://www.playframework.com/documentation/latest/Configuration
+
+mixer.process.timeout = 1 second
+
+service-context {
+  fork-join-executor {
+    parallelism-factor = 20.0
+    parallelism-max = 200
+  }
+}
+persistence-context {
+  fork-join-executor {
+    parallelism-factor = 20.0
+    parallelism-max = 200
+  }
+}
