--- a/test/resources/test-application.conf
+++ b/test/resources/test-application.conf
@@ -2,13 +2,13 @@ play.http.errorHandler = "controllers.ErrorHandler"
 play.i18n.langs = [ "en", "de" ]
 optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
 
-akka.http {
-  parsing {
-    max-uri-length = 16k
-  }
-}
-
 mixer-service {
+  execution-context {
+    fork-join-executor {
+      parallelism-factor = 20.0
+      parallelism-max = 200
+    }
+  }
   process {
     timeout = 1 second
     parallelism = 1
@@ -32,15 +32,3 @@ persistence-context {
     parallelism-max = 200
   }
 }
-
-slick.dbs.default {
-  driver="slick.driver.PostgresDriver$"
-  db {
-    driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://localhost:5434/jobsdb?user=postgres&password=postgres"
-    url = ${?JDBC_DATABASE_URL}
-    numThreads = 10
-    maxConnections = 10
-  }
- }
-play.evolutions.autoApply=true
