--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,15 @@
+play.http.secret.key = ${?APP_SECRET}
 play.http.errorHandler = "controllers.ErrorHandler"
 play.i18n.langs = [ "en", "de" ]
+
 optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
+
+play.filters {
+  disabled += "play.filters.csrf.CSRFFilter"
+  hosts {
+    allowed = [".herokuapp.com", "localhost:9000"]
+  }
+}
 
 akka.http {
   parsing {
@@ -38,7 +47,7 @@ slick.dbs.default {
   db {
     driver = "org.postgresql.Driver"
     url = "jdbc:postgresql://localhost:5434/jobsdb?user=postgres&password=postgres"
-    url = ${?JDBC_DATABASE_URL}
+    url = ${?DATABASE_URL}
     numThreads = 10
     maxConnections = 10
   }
