Added heroku.yml for initial deployment Added repo concurrent update test case

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,20 +1,16 @@
-play.http.secret.key = ${?APP_SECRET}
-play.http.errorHandler = "controllers.ErrorHandler"
-play.i18n.langs = [ "en", "de" ]
-
-optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
-
-play.filters {
-  disabled += "play.filters.csrf.CSRFFilter"
-  hosts {
-    allowed = [".herokuapp.com", "localhost:9000"]
+play {
+  http {
+    secret.key = ${?APP_SECRET}
+    errorHandler = "controllers.ErrorHandler"
   }
-}
-
-akka.http {
-  parsing {
-    max-uri-length = 16k
+  filters {
+    disabled += "play.filters.csrf.CSRFFilter"
+    hosts {
+      allowed = [".herokuapp.com", "localhost:9000"]
+    }
   }
+  i18n.langs = [ "en", "de" ]
+  evolutions.autoApply=true
 }
 
 mixer-service {
@@ -25,7 +21,14 @@ mixer-service {
   limits {
     max-colors=2000
     max-customers=2000
-    max-t-values=3000
+    t-max=3000
+  }
+}
+optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
+
+akka.http {
+  parsing {
+    max-uri-length = 16k
   }
 }
 
@@ -46,10 +49,9 @@ slick.dbs.default {
   driver="slick.driver.PostgresDriver$"
   db {
     driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://localhost:5434/jobsdb?user=postgres&password=postgres"
-    url = ${?DATABASE_URL}
-    numThreads = 10
+    url = "jdbc:postgresql://localhost:5432/jobsdb?user=postgres&password=postgres"
+    url = ${?JDBC_DATABASE_URL}
+    numThreads = 10,
     maxConnections = 10
   }
- }
-play.evolutions.autoApply=true
+}
