--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,7 +47,7 @@ slick.dbs.default {
   db {
     driver = "org.postgresql.Driver"
     url = "jdbc:postgresql://localhost:5434/jobsdb?user=postgres&password=postgres"
-    url = ${?DATABASE_URL}
+    url = ${?JDBC_DATABASE_URL}
     numThreads = 10
     maxConnections = 10
   }
