Extended test coverage + refactoring

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,6 @@
 play {
   http {
+    secret.key = "secret-key"
     secret.key = ${?APP_SECRET}
     errorHandler = "controllers.ErrorHandler"
   }
@@ -11,6 +12,7 @@ play {
   }
   i18n.langs = [ "en", "de" ]
   evolutions.autoApply=true
+  modules.enabled += "play.modules.swagger.SwaggerModule"
 }
 
 mixer-service {
@@ -25,7 +27,14 @@ mixer-service {
   }
 }
 optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
-
+api.version=v2
+swagger.api.info = {
+  contact : "phillips.roy@gmail.com"
+  description : Paint batch optimizer service
+  title : Chameleon Optimization Service
+  license : CC BY-SA
+  licenseUrl : "https://creativecommons.org/licenses/by-sa/4.0/"
+}
 akka.http {
   parsing {
     max-uri-length = 16k
@@ -49,7 +58,7 @@ slick.dbs.default {
   driver="slick.driver.PostgresDriver$"
   db {
     driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://localhost:5432/jobsdb?user=postgres&password=postgres"
+    url = "jdbc:postgresql://localhost:5434/jobsdb?user=postgres&password=postgres"
     url = ${?JDBC_DATABASE_URL}
     numThreads = 10,
     maxConnections = 10
