--- a/test/resources/test-application.conf
+++ b/test/resources/test-application.conf
@@ -1,4 +1,7 @@
+play.http.secret.key="secret"
 play.http.errorHandler = "controllers.ErrorHandler"
+play.filters.hosts.allowed = ["localhost"]
+play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.i18n.langs = [ "en", "de" ]
 optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
 
