Add metrics to the optimizer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,7 @@
 play.http.secret.key = ${?APP_SECRET}
 play.http.errorHandler = "controllers.ErrorHandler"
 play.i18n.langs = [ "en", "de" ]
-
+play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
 optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
 
 play.filters {
