Documented the API

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,13 @@
-play.http.secret.key = ${?APP_SECRET}
-play.http.errorHandler = "controllers.ErrorHandler"
-play.i18n.langs = [ "en", "de" ]
-play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play {
+  http {
+    secret.key = secret-key
+    secret.key = ${?APP_SECRET}
+    errorHandler = "controllers.ErrorHandler"
+  }
+  i18n.langs = ["en", "de"]
+  modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+  evolutions.autoApply=true
+}
 optimizer.implementation=algorithm.simple.OptimizerUsingPermutations
 
 play.filters {
@@ -46,10 +52,9 @@ slick.dbs.default {
   driver="slick.driver.PostgresDriver$"
   db {
     driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://localhost:5434/jobsdb?user=postgres&password=postgres"
+    url = "jdbc:postgresql://localhost:5432/jobsdb?user=postgres&password=postgres"
     url = ${?JDBC_DATABASE_URL}
     numThreads = 10
     maxConnections = 10
   }
- }
-play.evolutions.autoApply=true
+}
